fix overflow for modal

--- a/src/components/modal/modal.module.scss
+++ b/src/components/modal/modal.module.scss
@@ -4,7 +4,6 @@
   left: 0;
   bottom: 0;
   z-index: 9999;
-  overflow: auto;
   position: fixed;
   cursor: pointer;
   animation: fadein 2s ease;
